--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.application.name=UserAuthenticationService_Sept2024
+spring.application.name=UserAuthenticationService
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/userauthenticationservice_sept2024
+spring.datasource.url=jdbc:mysql://localhost:3306/userauthenticationservice
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+server.port=9000
+logging.level.org.springframework.security=trace
